--- a/.github/workflows/maven-tests.yml
+++ b/.github/workflows/maven-tests.yml
@@ -1,34 +1,62 @@
-name: Run Selenium Tests
+name: 01_01_02_24_hello_world
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
+env:
+  TASK_FOLDER: "${{ github.workspace }}"
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: '21'
+          cache: 'maven'
 
-      - name: Cache Maven packages
-        uses: actions/cache@v3
+      - name: Pull selenoid container
+        run: |
+          # Pull the Docker images
+          docker pull selenoid/vnc_chrome:128.0
+          docker pull selenoid/video-recorder:latest-release
+
+      - name: Run selenoid in Docker container
+        run: |
+          # Run the program in a Docker container
+          docker compose -f docker-compose up -d
+
+      - name: Wait for container to start
+        run: sleep 1
+
+      - name: Wait selenoid status
+        run: curl http://127.0.0.1:4444/status
+
+      - name: Build with Maven
+        run: mvn test
+
+      - name: Uploading report
+        uses: actions/upload-artifact@v4
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+          name: report
+          path: ./target/surefire-reports/html
 
-      - name: Install Chrome
-        uses: browser-actions/setup-chrome@v1
+      - name: Uploading video
+        uses: actions/upload-artifact@v4
+        with:
+          name: video
+          path: ./video
 
-      - name: Run Tests
-        run: mvn -B test
+      - name: Uploading logs
+        uses: actions/upload-artifact@v4
+        with:
+          name: logs
+          path: ./logs
+
+#      - name: Setup tmate session
+#        if: ${{ failure() }}
+#        uses: mxschmitt/action-tmate@v3.11
