--- a/.github/workflows/maven-tests.yml
+++ b/.github/workflows/maven-tests.yml
@@ -4,15 +4,18 @@ on:
   push:
     branches:
       - main
+
 env:
   TASK_FOLDER: "${{ github.workspace }}"
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
@@ -21,23 +24,21 @@ jobs:
 
       - name: Pull selenoid container
         run: |
-          # Pull the Docker images
           docker pull selenoid/vnc_chrome:128.0
           docker pull selenoid/video-recorder:latest-release
 
       - name: Run selenoid in Docker container
-        run: |
-          # Run the program in a Docker container
-          docker compose -f docker-compose up -d
+        run: docker compose -f docker-compose up -d
 
       - name: Wait for container to start
-        run: sleep 1
+        run: sleep 2
 
       - name: Wait selenoid status
         run: curl http://127.0.0.1:4444/status
 
+
       - name: Build with Maven
-        run: mvn test
+        run: mvn -Denv=github test
 
       - name: Uploading report
         uses: actions/upload-artifact@v4
@@ -56,7 +57,3 @@ jobs:
         with:
           name: logs
           path: ./logs
-
-#      - name: Setup tmate session
-#        if: ${{ failure() }}
-#        uses: mxschmitt/action-tmate@v3.11
